Update UI to ensure it is center aligned,

--- a/style.css
+++ b/style.css
@@ -88,7 +88,9 @@ input {
   display: flex;
   flex: 1;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100vh;
+  margin-inline: auto;
 }
 
 #title {
